<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:onClick="HaftalikOlaylar"
        android:text="@string/haftalik"
        android:textColor="@color/mavi"
        android:textSize="20sp"
        android:textStyle="bold" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="OncekiAy"
            android:text="@string/geri"
            android:textColor="@color/mavi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ayYil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/may_2023"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="SonrakiAy"
            android:text="@string/ileri"
            android:textColor="@color/mavi"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paz"
            android:textColor="@color/gri"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pzt"
            android:textColor="@color/gri"
            android:textAlignment="center"
            android:textSize="16sp"/>



        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sal"
            android:textColor="@color/gri"
            android:textAlignment="center"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/çar"
            android:textColor="@color/gri"
            android:textAlignment="center"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/per"
            android:textColor="@color/gri"
            android:textAlignment="center"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cum"
            android:textColor="@color/gri"
            android:textAlignment="center"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cmt"
            android:textColor="@color/gri"
            android:textAlignment="center"
            android:textSize="16sp"/>




    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/TakvimGorunum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
